--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
             <select class="currency-select">
                 <option value="dolar">US$ Dólar americano</option>
                 <option value="euro">€ Euro</option>
-                <option value="libras">£ Libras</option>
-                <option value="bitcoin">BTC Bitcoin</option>
+                <option value="libra">£ Libra</option>
+                <option value="bitcoin">₿ Bitcoin</option>
             </select>
         </label>
 
